--- a/index.html
+++ b/index.html
@@ -70,5 +70,16 @@
 </body>
 <footer>
     <img class="logo" src="NASA.png" alt="">
+    <span class="National">National Aeronautics and Space Administration</span><br>
+    <span class="NASA">NASA Official: Brian Dunbar</span>
+    <ul>
+        <li><a href="">No Fear Act</a></li>
+        <li><a href="FOIA">FOIA</li>
+        <li><a href="Privacy">Privacy</li>
+        <li><a href="office of Inspector General">office of Inspector General</li>
+        <li><a href="Office of Spatial Counsel">Office of Spatial Counsel</li>
+        <li><a href="Agency Financial Rerports">Agency Financial Rerports</li>
+        <li><a href="Contact NASA">Contact NASA</li>
+    </ul>
 </footer>
 </html>
